--- a/Systeme_solaire/Systeme_solaire.csproj
+++ b/Systeme_solaire/Systeme_solaire.csproj
@@ -129,5 +129,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Background\univert.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
