c'est bientrot finie

--- a/Systeme_solaire/Systeme_solaire.csproj
+++ b/Systeme_solaire/Systeme_solaire.csproj
@@ -129,9 +129,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Background\back.jpg" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Background\univert.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="son\son.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
